clusters/bison/istio/for-demo-2/armadillo-color-svc.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: armadillo-color-svc
spec:
  hosts:
    - color-svc.armadillo-offerings.global
    # - color-svc.armadillo-offerings.armadillo.global # Can be anything, as long as appropriate EnvoyFilter is in place on target cluster
  location: MESH_INTERNAL
  exportTo:
    - "*" # Temporarily set this to all namespaces
  ports:
    - name: http-armadillo
      number: 8800
      protocol: http
  resolution: STATIC
  addresses:
    - 240.0.0.2
  endpoints:
    - address: 172.18.0.1
      network: external
      ports:
        http-armadillo: 32021
    - address: 10.96.35.191
      ports:
        http-armadillo: 15443
---
# VirtualService definition on Armadillo side won't be able to handle the chaos setup.
# TODO: Check if this can be handled at IngressGateway instead
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-color-svc-routing
spec:
  hosts:
    - color-svc.armadillo-offerings.global
    # - color-svc.armadillo-offerings.armadillo.global
    - color-svc.armadillo-offerings.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.armadillo-offerings.global
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400

    # Default routing
    - route:
        - destination:
            host: color-svc.armadillo-offerings.global

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-color-svc-routing-external
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/bison-external-ingressgateway
  http:
    # Traffic handling for external IngressGateway mapping
    - match:
        - uri:
            prefix: /armadillo
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.armadillo-offerings.global
            port:
              number: 8800
