clusters/bison/istio/for-demo-2/armadillo-httpbin.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: armadillo-httpbin
spec:
  hosts:
    - httpbin.armadillo-offerings.global
    # - httpbin.armadillo-offerings.armadillo.global # Can be anything, as long as appropriate EnvoyFilter is in place on target cluster
  location: MESH_INTERNAL
  exportTo:
    - "*" # Temporarily set this to all namespaces
  ports:
    - name: http-armadillo
      number: 8000
      protocol: http
  resolution: STATIC
  addresses:
    - 240.0.0.1
  endpoints:
    - address: 172.18.0.1
      network: external
      ports:
        http-armadillo: 32021
    - address: 10.96.77.167
      ports:
        http-armadillo: 15443
---
# VirtualService definition on Armadillo side won't be able to handle the chaos setup.
# TODO: Check if this can be handled at IngressGateway instead
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-httpbin-routing
spec:
  hosts:
    - httpbin.armadillo-offerings.global
    # - httpbin.armadillo-offerings.armadillo.global
    - httpbin.armadillo-offerings.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.armadillo-offerings.global
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
    - route:
        - destination:
            host: httpbin.armadillo-offerings.global
    # # Default routing
    # - route:
    #     - destination:
    #         host: httpbin.armadillo-offerings.global
